# mini2

./: CMakeLists.txt
configs/distributed_testing_1/: config_A.json  config_B.json  config_C.json  config_D.json  config_E.json
configs/local_testing/: config_A.json  config_B.json  config_C.json  config_D.json  config_E.json
cpp/include/parser/: CSV.h  SpatialAnalysis.h
cpp/src/: SpatialAnalysis.cpp  server.cpp
proto/: mini2.proto
python/src/: client.py  mini2_pb2.py  mini2_pb2_grpc.py
